// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validator types jora-query from js jora-fail.js 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Fail  <pwd>/test/fixtures/cli/validate/jora-fail.js",
  ],
  Array [
    "",
  ],
  Array [
    "1 problems (1 errors, 0 warnings)",
  ],
]
`;

exports[`validator types jora-query from js jora-ok.js 1`] = `Array []`;

exports[`validator types raw jora-query fail.jora 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "error  Fail  <pwd>/test/fixtures/cli/validate/fail.jora",
  ],
  Array [
    "",
  ],
  Array [
    "1 problems (1 errors, 0 warnings)",
  ],
]
`;

exports[`validator types raw jora-query ok.jora 1`] = `Array []`;

exports[`validator types raw jora-query rules.jora 1`] = `
Array [
  Array [
    "unknown file",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info message  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info message without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn without assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn with assert  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "input.json",
  ],
  Array [
    "unknown compilation",
  ],
  Array [
    "info  Auto info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "info  Info for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "warn  Warn for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "error  Error for file  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "da95abcf6bbf9b157ff6",
  ],
  Array [
    "error  Something wrong  <pwd>/test/fixtures/cli/validate/rules.jora",
  ],
  Array [
    "",
  ],
  Array [
    "5 problems (2 errors, 3 warnings)",
  ],
]
`;
